Implement new book button

--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
         </tr>
 
     </table>
+
+    <button id="new-book">
+        NEW BOOK
+    </button>
+
+    <div class="hidden-form ninja">
+        <form action="">
+            This is the form
+        </form>
+    </div>
 </body>
 
 </html>
